# whatsapp-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md
bridge/: go.mod  main.go
bridge/internal/api/: api_test.go  download.go  health.go  ratelimit_test.go  react.go  send.go  server.go  typing.go
bridge/internal/auth/: auth_test.go  middleware.go  token.go
bridge/internal/config/: config.go
bridge/internal/media/: paths.go  paths_test.go
bridge/internal/ogg/: ogg.go
bridge/internal/ratelimit/: ratelimit.go  ratelimit_test.go
bridge/internal/store/: calls.go  calls_test.go  chats.go  coldsend_test.go  messages.go  migrate_chats.go  migrate_senders.go  migrate_test.go  store.go  store_test.go
bridge/internal/testutil/: testutil.go
deploy/: deploy-gce.sh  provision.sh
deploy/systemd/: whatsapp-bridge.service  whatsapp-mcp.service
server/: pyproject.toml
server/src/whatsapp_mcp/: __init__.py  __main__.py  auth.py  server.py
server/src/whatsapp_mcp/bridge/: __init__.py  client.py
server/src/whatsapp_mcp/core/: __init__.py  config.py  models.py  serialize.py  transport.py
server/src/whatsapp_mcp/db/: __init__.py  chats.py  contacts.py  identity.py  messages.py
server/src/whatsapp_mcp/media/: __init__.py  audio.py
server/src/whatsapp_mcp/tools/: __init__.py  chats.py  contacts.py  media.py  messages.py
server/tests/: test_auth.py  test_bridge_auth.py  test_get_contact.py  test_list_chats.py  test_message_context_tool.py  test_serialize.py  test_transport.py
whatsapp-bridge/: main.go  main_test.go  webhook.go  webhook_test.go
(+28 files in other folders)
